busybox-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeinvaders
---
apiVersion: v1
kind: Service
metadata:
  name: busybox
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/name: busybox
spec:
  ports:
  - port: 8000
    targetPort: 8080
  selector:
    app.kubernetes.io/name: busybox

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
  namespace: kubeinvaders
  labels:
    app.kubernetes.io/instance: busybox
    app.kubernetes.io/name: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: busybox
      app.kubernetes.io/name: busybox
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: busybox
        app.kubernetes.io/name: busybox
    spec:
      containers:
        - name: busybox
          image: pgr065.azurecr.io/go-kubernetes:v1.0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
