kubeinvaders-ingress.yaml
#comment for clarity
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
  annotations:  #line to be commented for starting tutorial
    kubernetes.io/ingress.class: "nginx"  #line to be commented for starting tutorial
    cert-manager.io/cluster-issuer: "letsencrypt-prod" #line to be commented for starting tutorial or updated using prod
spec:
  tls:  #line to be commented for starting tutorial
  - hosts:  #line to be commented for starting tutorial
    - www.killpods.ga #line to be commented for starting tutorial
    secretName: kubeinvaders-cert #line to be commented for starting tutorial
  rules:
  - host: "www.killpods.ga"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubeinvaders
            port:
              number: 1234
  - host: "www.demofun.ga"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: busybox
            port:
              number: 8000
